--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             alt=""
             class="img-fluid rounded-circle"
           />
-          <h1 class="text-light"><a href="index.html">Alex Smith</a></h1>
+          <h1 class="text-light"><a href="index.html">Nazir Ansari</a></h1>
           <div class="social-links mt-3 text-center">
             <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
             <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -107,7 +107,7 @@
       class="d-flex flex-column justify-content-center align-items-center"
     >
       <div class="hero-container" data-aos="fade-in">
-        <h1>Alex Smith</h1>
+        <h1>Nazir Ansari</h1>
         <p>
           I'm
           <span
@@ -403,7 +403,7 @@
             <div class="col-lg-6" data-aos="fade-up">
               <h3 class="resume-title">Sumary</h3>
               <div class="resume-item pb-0">
-                <h4>Alex Smith</h4>
+                <h4>Nazir Ansari</h4>
                 <p>
                   <em
                     >Innovative and deadline-driven Graphic Designer with 3+
